fix: (articles.css) aligning the height of article cards

--- a/css/ui-kit/article.css
+++ b/css/ui-kit/article.css
@@ -35,6 +35,12 @@
   row-gap: 15px;
 }
 
+@media (max-width: 768px) {
+  .article__content {
+    height: 100%;
+  }
+}
+
 .article__name {
   display: flex;
   flex-direction: column;
@@ -104,7 +110,7 @@
   color: var(--light-text-color);
 }
 
-@media (max-width: 780px) {
+@media (max-width: 768px) {
   .article__link {
     flex-direction: column;
   }
